# worldforge

./: .clang-format  .cvsignore  .editorconfig  .gdbinit  .gitignore  .mailmap  .travis.yml  AUTHORS  CHANGES-1.4  CLASS_LAYOUT  CMakeLists.txt  ChangeLog  ChangeLog-CVS  Doxyfile  Doxyfile.in  HACKING  HACKING.md  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES  PROTOCOL  README  README.API  README.md  README.wfmath-conversion  ROADMAP  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  appveyor.yml  atlas-config.in  atlas-cpp.spec  atlas-cpp.spec.in  atlas.m4  atlascpp-0.6.pc.in  (+52 more)
Atlas/: .cvsignore  Atlas.h  Bridge.cc  Bridge.cpp  Bridge.h  Codec.cpp  Codec.h  Codec_impl.h  Connection.h  Debug.h  EncoderBase.cpp  EncoderBase.h  Exception.cpp  Exception.h  Factory.cpp  Factory.h  Filter.cpp  Filter.h  Formatter.cpp  Formatter.h  Hack.cc  Hack.h  Makefile.am  Makefile.in  MultiLineListFormatter.cpp  MultiLineListFormatter.h  Negotiate.cpp  Negotiate.h  PresentationBridge.cpp  PresentationBridge.h  Task.h  Version.h  config.h.in  float.cpp  float.h
Eris/: .cvsignore  Account.cpp  Account.h  ActiveMarker.cpp  ActiveMarker.h  Alarm.cpp  Alarm.h  ArgumentDispatcher.cpp  ArgumentDispatcher.h  Avatar.cpp  Avatar.h  BaseConnection.cpp  BaseConnection.h  Calendar.cpp  Calendar.h  CharacterType.cpp  CharacterType.h  ClassDispatcher.cpp  ClassDispatcher.h  Connection.cpp  Connection.h  CustomEntities.cpp  CustomEntities.h  DebugDispatcher.cpp  DebugDispatcher.h  DeleteLater.cpp  DeleteLater.h  Dispatcher.cpp  Dispatcher.h  EncapDispatcher.h  Entity.cpp  Entity.h  EntityRef.cpp  EntityRef.h  EntityRouter.cpp  EntityRouter.h  EventService.cpp  EventService.h  Exceptions.cpp  Exceptions.h  (+97 more)
Mercator/: .cvsignore  Area.cpp  Area.h  AreaShader.cpp  AreaShader.h  BasePoint.cpp  BasePoint.h  Buffer.cpp  Buffer.h  Buffer_impl.h  DepthShader.cpp  DepthShader.h  Effector.cpp  Effector.h  FillShader.cpp  FillShader.h  Forest.cpp  Forest.h  GrassShader.cpp  GrassShader.h  HeightMap.cpp  HeightMap.h  Intersect.cpp  Intersect.h  Makefile.am  Matrix.cpp  Matrix.h  Plant.cpp  Plant.h  RandCache.h  Segment.cpp  Segment.h  Segment_impl.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  ShaderFactory_impl.h  Surface.cpp  Surface.h  (+13 more)
atlas/: .cvsignore  Makefile.am  atlas_0_4_test.cpp  atlas_0_6_test.cpp  atlas_0_7_test.cpp  atlas_funcs.cpp  atlas_funcs.h  atlas_test.cpp  atlasconv.cpp  atlasconv.h
benchmark/: .cvsignore  Call_Move.cc  Call_Move.cpp  Codecs_Packed.cpp  Makefile.am  Message_Element.cpp  Message_Move.cc  Message_Move.cpp  Objects2_Move.cpp  Objects3_Move.cpp  Objects_Move.cc  Objects_Move.cpp  Objects_asMessage.cpp  Objects_iterator.cpp  Objects_setAttr.cpp  README  SmartPtr_Move.cc  SmartPtr_Move.cpp  Static_Move.cc  Static_Move.cpp  results.txt  timer.h
bindings/: .cvsignore  Makefile.am
freeimage/: CMakeLists.txt  README.md  conanfile.py
lua/: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  DataObject.cpp  DataObject.hpp  DataObject_unittest.cpp  Makefile.am  MetaServer.cpp  MetaServer.hpp  MetaServer.hpp.in  MetaServerAPI.hpp  MetaServerHandler.cpp  MetaServerHandler.hpp  MetaServerHandlerTCP.cpp  MetaServerHandlerTCP.hpp  MetaServerHandlerTCP_unittest.cpp  MetaServerHandlerUDP.cpp  MetaServerHandlerUDP.hpp  MetaServerHandlerUDP_unittest.cpp  MetaServerPacket.cpp  MetaServerPacket.hpp  MetaServerPacket_unittest.cpp  MetaServerProtocol.hpp  MetaServerVersion.hpp  MetaServerVersion.hpp.in  MetaServer_unittest.cpp  PDNSPipe.cpp  PacketLogger.cpp  PacketLogger.hpp  PacketLogger_unittest.cpp  PacketLogging_integration.cpp  PacketPlayer.cpp  PacketReader.cpp  PacketReader.hpp  PacketReader_unittest.cpp  TestClient.cpp  TestServer.cpp  TestServer.hpp  atlas_convert.cpp  build.sh  main.cpp
test/: .cvsignore  Account_integrationtest.cpp  Account_unittest.cpp  Alarm_unittest.cpp  Avatar_unittest.cpp  BaseConnection_unittest.cpp  Calendar_unittest.cpp  Connection_unittest.cpp  ElementExerciser.h  Entity_unittest.cpp  EventService_unittest.cpp  IGRouter_unittest.cpp  Log_unittest.cpp  Makefile.am  Metaserver_integrationtest.cpp  Metaserver_unittest.cpp  PollWinsock_unittest.cpp  Room_unittest.cpp  ServerInfo_unittest.cpp  SignalFlagger.h  TerrainMod_unittest.cpp  TimedEventService_unittest.cpp  Timeout_unittest.cpp  TypeInfo_unittest.cpp  agent.cpp  agent.h  avatarTest.cpp  avatarTest.h  calendarTest.cpp  calendarTest.h  clientConnection.cpp  clientConnection.h  commander.cpp  commander.h  connect.cpp  controller.cpp  controller.h  metaQuery.cpp  netTests.cpp  netTests.h  (+25 more)
tests/: .cvsignore  Account_integrationtest.cpp  Account_unittest.cpp  AreaShadertest.cpp  Areatest.cpp  Avatar_unittest.cpp  BasePointtest.cpp  Buffertest.cpp  CMakeLists.txt  Calendar_unittest.cpp  CurlProviderTest.cpp  CurlResolverTest.cpp  DepthShadertest.cpp  ElementExerciser.h  Entity_unittest.cpp  EventService_unittest.cpp  FillShadertest.cpp  Foresttest.cpp  GeneratorTest.cpp  GrassShadertest.cpp  IGRouter_unittest.cpp  Intersecttest.cpp  IteratorTest.cpp  Makefile.am  Metaserver_integrationtest.cpp  Metaserver_unittest.cpp  Planttest.cpp  ProviderTest.cpp  RealizerTest.cpp  RepositoryTest.cpp  ResolverTest.cpp  Segmentperf.cpp  Segmenttest.cpp  ServerInfo_unittest.cpp  ShaderFactorytest.cpp  SignatureTest.cpp  TODO  TerrainModtest.cpp  TerrainaddAreatest.cpp  Terraintest.cpp  (+52 more)
tools/: .cvsignore  Config.cmake.in  Makefile.am  atlas-cpp.spec.in  atlas_convert.cpp  atlascpp.pc.in  eris.pc.in  eris.spec.in  mercator.pc.in  mercator.spec.in  mingw32-mercator.spec.in  mingw32-varconf.spec.in  mingw32-wfmath.spec.in  varconf.pc.in  wfmath.pc.in  wfmath.spec.in
tutorial/: .cvsignore  DebugBridge.h  Makefile  Makefile.am  building.dox  index.dox  message.dox  objects.dox  preamble.dox  simple.dox  simple_client.cc  simple_client.cpp  simple_server.cc  simple_server.cpp
varconf/: .cvsignore  Config.cc  Config.h  Makefile.am  Observer.cc  Observer.h  ParseError.cc  ParseError.h  Variable.cc  Variable.h  config.cpp  config.h  dtags.h  dynbase.cpp  dynbase.h  dyncmp.cpp  dyncmp.h  dyntypes.cpp  dynvar.h  (+9 more)
(+4048 files in other folders)
