AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)

lib_LTLIBRARIES = liberis-1.3.la

liberis_1_3_la_LDFLAGS = -version-info @ERIS_VERSION_INFO@

liberis_1_3_la_SOURCES = \
	Exceptions.cpp \
	Entity.cpp \
	Lobby.cpp \
	Account.cpp \
	BaseConnection.cpp \
	Connection.cpp \
	Types.cpp \
	Room.cpp \
	Person.cpp \
	Metaserver.cpp \
	MetaQuery.cpp \
	ServerInfo.cpp \
	Timeout.cpp \
	TypeInfo.cpp \
	PollDefault.cpp \
	Log.cpp \
	LogStream.h \
	Avatar.cpp \
	TypeService.cpp \
	View.cpp \
	Router.cpp \
	EntityRouter.cpp \
	IGRouter.cpp \
	Redispatch.cpp \
	Factory.cpp \
	TypeBoundRedispatch.cpp \
	DeleteLater.cpp \
	Response.cpp \
	EntityRef.cpp \
	Operations.cpp \
	Calendar.cpp \
	TimedEventService.cpp \
	Alarm.cpp \
	Task.cpp \
	TerrainModTranslator.cpp \
	TerrainModObserver.cpp \
	SpawnPoint.cpp \
	CharacterType.cpp \
	ViewEntity.cpp \
	iround.h \
	Transfer.cpp

liberis_1_3_la_LIBADD = $(ERIS_DEPS)

liberisdir = $(includedir)/Eris-1.3/Eris

liberis_HEADERS = \
	Exceptions.h \
	BaseConnection.h \
	Connection.h \
	Lobby.h \
	Factory.h \
	Entity.h \
	EntityRouter.h \
	Account.h \
	Types.h \
	IGRouter.h \
	LogStream.h \
	MetaQuery.h \
	Redispatch.h \
	Router.h \
	UIFactory.h \
	Room.h \
	Person.h \
	Metaserver.h \
	ServerInfo.h \
	Timeout.h \
	TypeInfo.h \
	Poll.h \
	PollDefault.h \
	Log.h \
	Avatar.h \
	TypeService.h \
	View.h \
	TypeBoundRedispatch.h \
	DeleteLater.h \
	Response.h \
	EntityRef.h \
	Operations.h \
	Calendar.h \
	TimedEventService.h \
	Alarm.h \
	Task.h \
	TerrainModTranslator.h \
	TerrainModObserver.h \
	SpawnPoint.h \
	CharacterType.h \
	ViewEntity.h \
	iround.h \
	Transfer.h
