AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)

lib_LTLIBRARIES = liberis-1.4.la

liberis_1_4_la_LDFLAGS = -version-info @ERIS_VERSION_INFO@

liberis_1_4_la_SOURCES = \
	Exceptions.cpp \
	Entity.cpp \
	Lobby.cpp \
	Account.cpp \
	BaseConnection.cpp \
	Connection.cpp \
	Types.cpp \
	Room.cpp \
	Person.cpp \
	Metaserver.cpp \
	MetaQuery.cpp \
	ServerInfo.cpp \
	TypeInfo.cpp \
	Log.cpp \
	LogStream.h \
	Avatar.cpp \
	TypeService.cpp \
	View.cpp \
	Router.cpp \
	EntityRouter.cpp \
	IGRouter.cpp \
	Redispatch.cpp \
	Factory.cpp \
	TypeBoundRedispatch.cpp \
	Response.cpp \
	EntityRef.cpp \
	Operations.cpp \
	Calendar.cpp \
	EventService.cpp \
	Task.cpp \
	SpawnPoint.cpp \
	CharacterType.cpp \
	ViewEntity.cpp \
	iround.h \
	TransferInfo.cpp \
	CustomEntities.cpp \
	StreamSocket.cpp \
	Session.cpp

liberis_1_4_la_LIBADD = $(ERIS_DEPS)

liberisdir = $(includedir)/Eris-1.4/Eris

liberis_HEADERS = \
	Exceptions.h \
	BaseConnection.h \
	Connection.h \
	Lobby.h \
	Factory.h \
	Entity.h \
	EntityRouter.h \
	Account.h \
	Types.h \
	IGRouter.h \
	LogStream.h \
	MetaQuery.h \
	Redispatch.h \
	Router.h \
	Room.h \
	Person.h \
	Metaserver.h \
	ServerInfo.h \
	TypeInfo.h \
	Log.h \
	Avatar.h \
	TypeService.h \
	View.h \
	TypeBoundRedispatch.h \
	Response.h \
	EntityRef.h \
	Operations.h \
	Calendar.h \
	EventService.h \
	Task.h \
	SpawnPoint.h \
	CharacterType.h \
	ViewEntity.h \
	iround.h \
	TransferInfo.h  \
	CustomEntities.h \
	StreamSocket.h \
	StreamSocket_impl.h \
	Session.h \
	WaitFreeQueue.h
