AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)

lib_LTLIBRARIES = libmercator-0.3.la

libmercator_0_3_la_LDFLAGS = -version-info @MERCATOR_VERSION_INFO@

libmercator_0_3_la_SOURCES = \
	iround.h \
	Mercator.cpp \
	Matrix.cpp \
	Terrain.cpp \
	Effector.cpp \
	TerrainMod.cpp \
	BasePoint.cpp \
	Buffer.cpp \
	Segment.cpp \
	Shader.cpp \
	FillShader.cpp \
	ThresholdShader.cpp \
	DepthShader.cpp \
	GrassShader.cpp \
	TileShader.cpp \
	ShaderFactory.cpp \
	Intersect.cpp \
	Surface.cpp \
	Plant.cpp \
	Forest.cpp \
	Area.cpp \
	AreaShader.cpp

libmercatordir = $(includedir)/Mercator-0.3/Mercator

libmercator_HEADERS = \
	Mercator.h \
	Matrix.h \
	Terrain.h \
	Effector.h \
	TerrainMod.h \
	TerrainMod_impl.h \
	BasePoint.h \
	Segment.h \
	Buffer_impl.h Buffer.h \
	Shader.h \
	FillShader.h \
	ThresholdShader.h \
	DepthShader.h \
	GrassShader.h \
	TileShader.h \
	ShaderFactory.h \
	ShaderFactory_impl.h \
	Intersect.h \
	Surface.h \
	Plant.h \
	Forest.h \
	RandCache.h \
	Area.h \
	AreaShader.h
	
